this should fix nav font sizes on mobile safari

--- a/mdc3/media/css/site.css
+++ b/mdc3/media/css/site.css
@@ -285,3 +285,7 @@ div#submenu ul li, div#bottombezel ul li {
 .submenuitem li a {
     padding: 0.25em;
 }
+
+li a {
+    font-size: 100%;
+}
